docs: 更新README并添加cz脚本

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "prepare": "husky"
+    "prepare": "husky",
+    "cz": "cz"
   },
   "dependencies": {
     "vue": "^3.5.17"
